--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 body {
   text-align: center;
 }
+
+.adv-card {
+  text-align: left;
+  border: 2px solid gray;
+  border-radius: 12px;
+  width: 40%;
+  padding: 8px;
+  background-color: lightgray;
+}
+
+.adv-card p:not(:first-child) {
+  margin-top: -8px;
+}
+
+.adv-card p:first-child {
+  margin-top: 8px;
+}
+
+.adv-card-name {
+  font-size: 1.25rem;
+}
+
+.adv-card-stats {
+  background-color: whitesmoke;
+  border-top: 2px solid gray;
+  border-bottom: 2px solid gray;
+  padding-left: 8px;
+}
+
+.adv-card-experiences {
+  border-top: 1px dashed gray;
+  padding-top: 8px;
+}
