--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
   margin-top: 8px;
 }
 
-.adv-card-name {
+.adv-card-name,
+.adv-card-feature-title {
   font-size: 1.25rem;
 }
 
@@ -33,4 +34,9 @@ body {
 .adv-card-experiences {
   border-top: 1px dashed gray;
   padding-top: 8px;
+}
+
+.adv-card-feature-title {
+  padding-top: 16px;
+  margin-bottom: 0px;
 }
