--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   text-align: left;
   border: 2px solid gray;
   border-radius: 12px;
-  width: 40%;
+  width: 400px;
   padding: 8px;
   background-color: lightgray;
 }
@@ -61,4 +61,11 @@ body {
   background-color: black;
   color: whitesmoke;
   font-weight: bold;
+}
+
+#adv-display {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  flex-wrap: wrap;
 }
